--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -64,10 +64,10 @@
 
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'minWidth.%': 46}" class="text-white bg-primary py-5">
+          <c-card [ngStyle]="{'minWidth.%': 46}" class="text-white bg-primary py-5 ">
             <c-card-body class="text-center">
-              <div>
-                <img src="../../../assets/images/jedanlogo.jpg" class="jedank-logo" width="300px" height="auto" alt="My Logo">
+              <div class="jedank-logo-container">
+                <img src="../../../assets/images/jedanlogofondo.png" class="jedank-logo" width="300px" height="auto" alt="My Logo">
 
                     <h4>                  "Tu Mundo, Siempre Localizable"
                     </h4>
