--- a/src/app/views/clientes/clientes.component.scss
+++ b/src/app/views/clientes/clientes.component.scss
@@ -1,3 +1,10 @@
+.table-responsive {
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+}
 #guardar-persona {
   align-self: center;
   padding: 10px 20px;
