--- a/src/app/views/pages/login/login.component.scss
+++ b/src/app/views/pages/login/login.component.scss
@@ -1,9 +1,22 @@
+.jedank-logo-container {
+  width: 100%;
+  max-width: 300px; /* Asegura que el contenedor no exceda este tamaño */
+  margin-bottom: 20px; /* Espacio debajo del contenedor */
+  border-radius: 10px; /* Bordes redondeados del contenedor */
+  box-shadow: 0 40px 14px #000000;  /* Sombra alrededor del contenedor */
+  display: block; /* Asegura que el contenedor sea un bloque */
+  margin-left: auto; /* Centra el contenedor horizontalmente */
+  margin-right: auto; /* Centra el contenedor horizontalmente */
+  border: 2px solid #212631; /* Borde del contenedor */
+  background-color: #6a1b9a; /* Color de fondo del contenedor */
+  padding: 10px; /* Espacio interior del contenedor */
+}
+
 .jedank-logo {
-  width: 300px;
-  height: auto;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 0 10px 14px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: auto; /* Mantiene la proporción de la imagen */
+  display: block; /* Asegura que la imagen sea un bloque */
+  border-radius: 10px; /* Bordes redondeados de la imagen */
 }
 .ng-touched.ng-invalid {
   border-color: #dc3545; /* color rojo para indicar error */
