--- a/src/app/views/prestamo/prestamo.component.scss
+++ b/src/app/views/prestamo/prestamo.component.scss
@@ -1,3 +1,10 @@
+.table-responsive {
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+}
 #guardar-prestamo {
     align-self: center;
     padding: 10px 20px;
