--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -1,64 +1,35 @@
 <ng-container>
-  
-  <c-container [fluid]="true" class="border-bottom px-4">
+  <c-container [fluid]="true" class="border-bottom px-4 d-flex justify-content-between">
     <button
       [cSidebarToggle]="sidebarId"
       cHeaderToggler
-      class="btn"
       toggle="visible"
       style="margin-inline-start: -14px"
       aria-label="Toggle sidebar navigation"
     >
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
-    <c-header-nav class="d-none d-md-flex">
-      <!--      <c-nav-item>-->
-      <!--        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>-->
-      <!--      </c-nav-item>-->
-      <!--      <c-nav-item>-->
-      <!--        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>-->
-      <!--      </c-nav-item>-->
-      <!--      <c-nav-item>-->
-      <!--        <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>-->
-      <!--      </c-nav-item>-->
-    </c-header-nav>
 
-    <c-header-nav class="d-none d-md-flex ms-auto">
-      <!--      <a cNavLink>-->
-      <!--        <svg cIcon class="my-1" name="cilBell" size="lg"></svg>-->
-      <!--      </a>-->
-      <ng-container *ngTemplateOutlet="AlertDropdown" />
+    <div class="d-flex ms-auto">
+      <c-header-nav>
+        <ng-container *ngTemplateOutlet="ConfigDropdown" />
+      </c-header-nav>
 
-      <!--      <a cNavLink>-->
-      <!--        <svg cIcon class="my-1" name="cilList" size="lg"></svg>-->
-      <!--      </a>-->
-      <!--      <a cNavLink>-->
-      <!--        <svg cIcon class="my-1" name="cilEnvelopeOpen" size="lg"></svg>-->
-      <!--      </a>-->
-    </c-header-nav>
+      <c-header-nav>
+        <ng-container *ngTemplateOutlet="AlertDropdown" />
+      </c-header-nav>
 
-    <c-header-nav class="ms-auto ms-md-0">
-      <ng-container *ngTemplateOutlet="ConfigDropdown" />
-    </c-header-nav>
+      <c-header-nav>
+        <ng-container *ngTemplateOutlet="themeDropdown" />
+      </c-header-nav>
+    </div>
 
-    <c-header-nav class="ms-auto ms-md-0">
-      <div class="nav-item py-1">
-        <div class="vr h-100 mx-2 text-body text-opacity-75"></div>
-      </div>
-      <ng-container *ngTemplateOutlet="themeDropdown" />
-      <div class="nav-item py-1">
-        <div class="vr h-100 mx-2 text-body text-opacity-75"></div>
-      </div>
-    </c-header-nav>
-
-    <c-header-nav class="mx-0">
+    <c-header-nav class="ms-0">
       <ng-container *ngTemplateOutlet="userDropdown" />
     </c-header-nav>
   </c-container>
-  <!--  <c-container [fluid]="true" class="px-4">-->
-  <!--    <c-breadcrumb-router />-->
-  <!--  </c-container>-->
 </ng-container>
+
 <!--</c-header>-->
 
 <ng-template #userDropdown>
@@ -104,28 +75,6 @@
           Perfil
         </a>
       </li>
-      <!--        <a cDropdownItem routerLink="/apps/email/inbox">-->
-      <!--          <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>-->
-      <!--          Messages-->
-      <!--          <c-badge class="ms-2 float-end" color="success">-->
-      <!--            42-->
-      <!--          </c-badge>-->
-      <!--        </a>-->
-      <!--      </li>-->
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="">-->
-      <!--          <svg cIcon class="me-2" name="cilTask"></svg>-->
-      <!--          Tasks-->
-      <!--          <c-badge class="ms-2 float-end" color="danger"> 42</c-badge>-->
-      <!--        </a>-->
-      <!--      </li>-->
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="">-->
-      <!--          <svg cIcon class="me-2" name="cilCommentSquare"></svg>-->
-      <!--          Comments-->
-      <!--          <c-badge class="ms-auto" color="warning"> 42</c-badge>-->
-      <!--        </a>-->
-      <!--      </li>-->
       <li>
         <h6
           cDropdownHeader
@@ -135,40 +84,9 @@
         </h6>
       </li>
       <li></li>
-
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="">-->
-      <!--          <svg cIcon class="me-2" name="cilSettings"></svg>-->
-      <!--          Settings-->
-      <!--        </a>-->
-      <!--      </li>-->
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="">-->
-      <!--          <svg cIcon class="me-2" name="cilCreditCard"></svg>-->
-      <!--          Payments-->
-      <!--          <c-badge class="ms-2 float-end" color="secondary">-->
-      <!--            42-->
-      <!--          </c-badge>-->
-      <!--        </a>-->
-      <!--      </li>-->
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="">-->
-      <!--          <svg cIcon class="me-2" name="cilFile"></svg>-->
-      <!--          Projects-->
-      <!--          <c-badge class="ms-2 float-end" color="primary">-->
-      <!--            42-->
-      <!--          </c-badge>-->
-      <!--        </a>-->
-      <!--      </li>-->
       <li>
         <hr cDropdownDivider />
       </li>
-      <!--      <li>-->
-      <!--        <a cDropdownItem routerLink="" (click)="logout()">-->
-      <!--          <svg cIcon class="me-2" name="cilLockLocked"></svg>-->
-      <!--          Lock Account-->
-      <!--        </a>-->
-      <!--      </li>-->
       <li>
         <a cDropdownItem routerLink="" (click)="logout()">
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
@@ -202,7 +120,7 @@
 </ng-template>
 
 <ng-template #ConfigDropdown>
-  <c-dropdown alignment="end" variant="nav-item" [autoClose]="false">
+  <c-dropdown alignment="end" variant="nav-item" [autoClose]="true">
     <button
       [caret]="false"
       cDropdownToggle
@@ -266,13 +184,15 @@
     </div>
   </c-dropdown>
 </ng-template>
+
 <ng-template #AlertDropdown>
-  <c-dropdown alignment="end" variant="nav-item" [autoClose]="false">
-    <button [caret]="false" cDropdownToggle aria-label="Open configuration picker" class="notification-button" (click)="updateAlertasVistas()">
+  <c-dropdown alignment="end" variant="nav-item" [autoClose]="true">
+    <button [caret]="false"
+    cDropdownToggle aria-label="Open configuration picker"(click)="updateAlertasVistas()">
       <svg cIcon name="cilBell" size="lg"></svg>
       <span *ngIf="newNotificaciones > 0" class="badge bg-danger rounded-pill notification-badge">{{ '+' + newNotificaciones }}</span>
-    </button>    
-    
+    </button>
+
     <div cDropdownMenu class="dropdown-menu dropdown-menu-end p-0" style="width: 400px; max-height: 450px">
       <div class="d-flex align-items-center justify-content-center mb-3">
         <h5 class="card-title">Notificaciones</h5>
@@ -307,8 +227,6 @@
     </div>
   </c-dropdown>
 </ng-template>
-
-
 
 <c-modal [(visible)]="isAlertaInfo" [backdrop]="false">
   <c-modal-header class="bg-primary text-white">
@@ -413,6 +331,5 @@
     <button type="button" class="btn btn-secondary mt-3" (click)="cerrarAlertaInfo()">Cerrar</button>
   </c-modal-footer>
 </c-modal>
-
 
 
