--- a/src/app/layout/default-layout/default-layout.component.html
+++ b/src/app/layout/default-layout/default-layout.component.html
@@ -7,8 +7,11 @@
   visible
 >
   <c-sidebar-header class="border-bottom">
-    <c-sidebar-brand [routerLink]="[]">
-      <img src="../../../assets/images/jedanlogofondo.png" class="sidebar-brand-full" width="200px" height="auto" alt="My Logo">
+    <c-sidebar-brand [routerLink]="['/nosotros']">
+      <a [routerLink]="['/nosotros']">
+        <img src="../../../assets/images/jedanlogofondo.png" class="sidebar-brand-full" width="200px" height="auto" alt="My Logo">
+      </a>
+
     </c-sidebar-brand>
   </c-sidebar-header>
 
